    not legal git refs.
  * git-annex (but not git-annex-shell) supports the git help.autocorrect
    configuration setting, doing fuzzy matching using the restricted
    Damerau-Levenshtein edit distance, just as git does. This adds a build
    dependency on the haskell edit-distance library.
  * Renamed diskfree.c to avoid OSX case insensativity bug.

 -- Joey Hess <joeyh@debian.org>  Sun, 08 Apr 2012 12:23:42 -0400

git-annex (3.20120406) unstable; urgency=low

  * Disable diskfree on kfreebsd, as I have a build failure on kfreebsd-i386
    that is quite likely caused by it.

 -- Joey Hess <joeyh@debian.org>  Sat, 07 Apr 2012 15:50:36 -0400

git-annex (3.20120405) unstable; urgency=low

  * Rewrote free disk space checking code, moving the portability
    handling into a small C library.
  * status: Display amount of free disk space.

 -- Joey Hess <joeyh@debian.org>  Thu, 05 Apr 2012 16:19:10 -0400

git-annex (3.20120315) unstable; urgency=low

  * fsck: Fix up any broken links and misplaced content caused by the
    directory hash calculation bug fixed in the last release.
  * sync: Sync to lower cost remotes first.
  * status: Fixed to run in constant space.
  * status: More accurate display of sizes of tmp and bad keys.
  * unused: Now uses a bloom filter, and runs in constant space.
    Use of a bloom filter does mean it will not notice a small
    number of unused keys. For repos with up to half a million keys,
    it will miss one key in 1000.
  * Added annex.bloomcapacity and annex.bloomaccuracy, which can be
    adjusted as desired to tune the bloom filter.
  * status: Display amount of memory used by bloom filter, and
    detect when it's too small for the number of keys in a repository.
  * git-annex-shell: Runs hooks/annex-content after content is received
    or dropped.
  * Work around a bug in rsync (IMHO) introduced by openSUSE's SIP patch.
  * git-annex now behaves as git-annex-shell if symlinked to and run by that